--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -8,11 +8,19 @@
     "\n",
     "## Web Scraping and NLP with Requests, BeautifulSoup, and spaCy\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Dinesh Gurumoorthy\n",
+    "### Github link:https://github.com/dineshgurum8/620-mod6-web-scraping/tree/master\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
     "Every question that requires you to write code will have a code cell underneath it; you may either write your entire solution in that cell or write it in a python file (`.py`), then import and run the appropriate code to answer the question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1"
    ]
   },
   {
@@ -24,10 +32,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Article content saved to 'laser_headlights_article.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pickle\n",
+    "\n",
+    "# URL of the archived Hackaday article\n",
+    "url = \"https://web.archive.org/web/20210327165005/https://hackaday.com/2021/03/22/how-laser-headlights-work/\"\n",
+    "\n",
+    "# Fetch the page\n",
+    "response = requests.get(url)\n",
+    "response.raise_for_status()  # Raise error if request failed\n",
+    "\n",
+    "# Parse HTML content\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Extract the article content\n",
+    "article = soup.find('div', class_='entry-content')\n",
+    "\n",
+    "if article:\n",
+    "    # Save the HTML of the article to a pickle file\n",
+    "    with open('laser_headlights_article.pkl', 'wb') as f:\n",
+    "        pickle.dump(str(article), f)\n",
+    "    print(\" Article content saved to 'laser_headlights_article.pkl'\")\n",
+    "else:\n",
+    "    print(\"Article content not found.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
