--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -74,6 +74,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Read in your article's html source from the file you created in question 1 and print it's text (use `.get_text()`)"
    ]
   },
@@ -136,7 +143,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. Load the article text into a trained `spaCy` pipeline, and determine the 5 most frequent tokens (converted to lower case).  Print the common tokens with an appropriate label.  Additionally, print the tokens their frequencies (with appropriate labels). Make sure to remove things we don't care about (punctuation, stopwords, whitespace)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 most frequent tokens (lowercase, cleaned):\n",
+      "  Token: 'laser' — Frequency: 30\n",
+      "  Token: 'headlights' — Frequency: 17\n",
+      "  Token: 'technology' — Frequency: 10\n",
+      "  Token: 'headlight' — Frequency: 10\n",
+      "  Token: 'led' — Frequency: 10\n",
+      "\n",
+      "All token frequencies (sample):\n",
+      "  Token: 'think' — Frequency: 1\n",
+      "  Token: 'onward' — Frequency: 1\n",
+      "  Token: 'march' — Frequency: 1\n",
+      "  Token: 'automotive' — Frequency: 6\n",
+      "  Token: 'technology' — Frequency: 10\n",
+      "  Token: 'headlights' — Frequency: 17\n",
+      "  Token: 'usually' — Frequency: 1\n",
+      "  Token: 'thing' — Frequency: 2\n",
+      "  Token: 'come' — Frequency: 5\n",
+      "  Token: 'mind' — Frequency: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from collections import Counter\n",
+    "import spacy\n",
+    "\n",
+    "# Load spaCy English model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Load the article HTML from .pkl\n",
+    "with open('laser_headlights_article.pkl', 'rb') as f:\n",
+    "    article_html = pickle.load(f)\n",
+    "\n",
+    "# Parse HTML to text\n",
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(article_html, 'html.parser')\n",
+    "text = soup.get_text(separator=' ', strip=True)\n",
+    "\n",
+    "# Process text with spaCy\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Filter tokens: no stopwords, no punctuation, no whitespace\n",
+    "tokens = [\n",
+    "    token.text.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "]\n",
+    "\n",
+    "# Count token frequencies\n",
+    "freqs = Counter(tokens)\n",
+    "\n",
+    "# Get 5 most common tokens\n",
+    "most_common = freqs.most_common(5)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Top 5 most frequent tokens (lowercase, cleaned):\")\n",
+    "for token, count in most_common:\n",
+    "    print(f\"  Token: '{token}' — Frequency: {count}\")\n",
+    "\n",
+    "print(\"\\nAll token frequencies (sample):\")\n",
+    "for token, count in list(freqs.items())[:10]:  # printing sample first 10 tokens\n",
+    "    print(f\"  Token: '{token}' — Frequency: {count}\")\n"
    ]
   },
   {
