--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -227,11 +227,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Question 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,10 +242,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 most frequent lemmas (lowercase, cleaned):\n",
+      "  Lemma: 'laser' — Frequency: 35\n",
+      "  Lemma: 'headlight' — Frequency: 26\n",
+      "  Lemma: 'beam' — Frequency: 12\n",
+      "  Lemma: 'technology' — Frequency: 10\n",
+      "  Lemma: 'led' — Frequency: 10\n",
+      "\n",
+      "Sample of lemma frequencies:\n",
+      "  Lemma: 'think' — Frequency: 1\n",
+      "  Lemma: 'onward' — Frequency: 1\n",
+      "  Lemma: 'march' — Frequency: 1\n",
+      "  Lemma: 'automotive' — Frequency: 6\n",
+      "  Lemma: 'technology' — Frequency: 10\n",
+      "  Lemma: 'headlight' — Frequency: 26\n",
+      "  Lemma: 'usually' — Frequency: 1\n",
+      "  Lemma: 'thing' — Frequency: 3\n",
+      "  Lemma: 'come' — Frequency: 7\n",
+      "  Lemma: 'mind' — Frequency: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from collections import Counter\n",
+    "import spacy\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Load spaCy English model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Load the article HTML from .pkl\n",
+    "with open('laser_headlights_article.pkl', 'rb') as f:\n",
+    "    article_html = pickle.load(f)\n",
+    "\n",
+    "# Parse HTML to extract plain text\n",
+    "soup = BeautifulSoup(article_html, 'html.parser')\n",
+    "text = soup.get_text(separator=' ', strip=True)\n",
+    "\n",
+    "# Process text with spaCy pipeline\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Extract lemmas, filter out stopwords, punctuation, whitespace\n",
+    "lemmas = [\n",
+    "    token.lemma_.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "]\n",
+    "\n",
+    "# Count lemma frequencies\n",
+    "lemma_freq = Counter(lemmas)\n",
+    "\n",
+    "# Get top 5 most common lemmas\n",
+    "top_5 = lemma_freq.most_common(5)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Top 5 most frequent lemmas (lowercase, cleaned):\")\n",
+    "for lemma, freq in top_5:\n",
+    "    print(f\"  Lemma: '{lemma}' — Frequency: {freq}\")\n",
+    "\n",
+    "print(\"\\nSample of lemma frequencies:\")\n",
+    "for lemma, freq in list(lemma_freq.items())[:10]:\n",
+    "    print(f\"  Lemma: '{lemma}' — Frequency: {freq}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
