--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -317,6 +317,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Define the following methods:\n",
     "    * `score_sentence_by_token(sentence, interesting_token)` that takes a sentence and a list of interesting token and returns the number of times that any of the interesting words appear in the sentence divided by the number of words in the sentence\n",
     "    * `score_sentence_by_lemma(sentence, interesting_lemmas)` that takes a sentence and a list of interesting lemmas and returns the number of times that any of the interesting lemmas appear in the sentence divided by the number of words in the sentence\n",
@@ -326,10 +333,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First sentence:\n",
+      "When we think about the onward march of automotive technology, headlights aren’t usually the first thing that come to mind.\n",
+      "\n",
+      "Score by tokens (interesting tokens = top 5): 0.095\n",
+      "Score by lemmas (interesting lemmas = top 5): 0.095\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from collections import Counter\n",
+    "import spacy\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Load spaCy English model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Load the article HTML from .pkl\n",
+    "with open('laser_headlights_article.pkl', 'rb') as f:\n",
+    "    article_html = pickle.load(f)\n",
+    "\n",
+    "# Extract plain text from HTML\n",
+    "soup = BeautifulSoup(article_html, 'html.parser')\n",
+    "text = soup.get_text(separator=' ', strip=True)\n",
+    "\n",
+    "# Process full text with spaCy\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# -- Question 3 part: frequent tokens\n",
+    "tokens = [\n",
+    "    token.text.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "]\n",
+    "token_freqs = Counter(tokens)\n",
+    "frequent_tokens = [token for token, freq in token_freqs.most_common(5)]\n",
+    "\n",
+    "# -- Question 4 part: frequent lemmas\n",
+    "lemmas = [\n",
+    "    token.lemma_.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "]\n",
+    "lemma_freqs = Counter(lemmas)\n",
+    "frequent_lemmas = [lemma for lemma, freq in lemma_freqs.most_common(5)]\n",
+    "\n",
+    "# Define scoring functions\n",
+    "\n",
+    "def score_sentence_by_token(sentence, interesting_tokens):\n",
+    "    \"\"\"Return the count of interesting tokens in sentence / number of words.\"\"\"\n",
+    "    # Filter sentence tokens to exclude punctuation and spaces\n",
+    "    tokens = [token.text.lower() for token in sentence if not (token.is_punct or token.is_space)]\n",
+    "    if not tokens:\n",
+    "        return 0.0\n",
+    "    count = sum(token in interesting_tokens for token in tokens)\n",
+    "    return count / len(tokens)\n",
+    "\n",
+    "def score_sentence_by_lemma(sentence, interesting_lemmas):\n",
+    "    \"\"\"Return the count of interesting lemmas in sentence / number of words.\"\"\"\n",
+    "    lemmas = [token.lemma_.lower() for token in sentence if not (token.is_punct or token.is_space)]\n",
+    "    if not lemmas:\n",
+    "        return 0.0\n",
+    "    count = sum(lemma in interesting_lemmas for lemma in lemmas)\n",
+    "    return count / len(lemmas)\n",
+    "\n",
+    "# Test with the first sentence of the article\n",
+    "first_sentence = list(doc.sents)[0]\n",
+    "\n",
+    "print(\"First sentence:\")\n",
+    "print(first_sentence.text)\n",
+    "\n",
+    "token_score = score_sentence_by_token(first_sentence, frequent_tokens)\n",
+    "lemma_score = score_sentence_by_lemma(first_sentence, frequent_lemmas)\n",
+    "\n",
+    "print(f\"\\nScore by tokens (interesting tokens = top 5): {token_score:.3f}\")\n",
+    "print(f\"Score by lemmas (interesting lemmas = top 5): {lemma_score:.3f}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
