--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -584,7 +584,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "8. Which tokens and lexems would be ommitted from the lists generated in questions 3 and 4 if we only wanted to consider nouns as interesting words?  How might we change the code to only consider nouns? Put your answer in this Markdown cell (you can edit it by double clicking it)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After reviewing the tokens and lemmas from questions 3 and 4, none of the top 5 most common tokens and lemmas would be omitted if we restricted the list to nouns, as they all appear to be nouns or proper nouns.\n",
+    "\n",
+    "To ensure that only nouns are considered, we would modify our code to check each token’s part-of-speech tag using token.pos_. The token.pos_ attribute tells us the grammatical category of the token, such as noun (NOUN), proper noun (PROPN), verb (VERB), adjective (ADJ), etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For tokens (Q3)\n",
+    "tokens = [\n",
+    "    token.text.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "    and token.pos_ in (\"NOUN\", \"PROPN\")  # Only nouns and proper nouns\n",
+    "]\n",
+    "\n",
+    "# For lemmas (Q4)\n",
+    "lemmas = [\n",
+    "    token.lemma_.lower()\n",
+    "    for token in doc\n",
+    "    if not (token.is_stop or token.is_punct or token.is_space)\n",
+    "    and token.pos_ in (\"NOUN\", \"PROPN\")\n",
+    "]\n"
    ]
   }
  ],
