Converting .ipynb file to html file

--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -625,6 +625,32 @@
     "    and token.pos_ in (\"NOUN\", \"PROPN\")\n",
     "]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook web-scraping.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 2 image(s).\n",
+      "[NbConvertApp] Writing 393067 bytes to web-scraping.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html web-scraping.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
